# starranja

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  test.yml
backend/: .gitignore  pyproject.toml
backend/src/: logging_config.py  main.py
docs/: architecture.md  create_auth_db.md  create_auth_db.txt  database-mongodb-setup.js  database_architecture_mongodb.md
scripts/auth/: generate_paseto_key.py
scripts/db/: .env.example  docker-compose.yml  test.compose.yml
scripts/db/migrations/: env.py
scripts/db/migrations/versions/: 25a3aa9b5491_create_initial_users_roles_and_user_.py
scripts/db/mongodb/: database-mongodb-setup.js
scripts/db/postgresql/: init_roles_table.py
scripts/db/postgresql/migrations/: env.py
scripts/db/postgresql/migrations/versions/: 1ee74fe46987_add_refresh_tokens_table_for_session_.py  25a3aa9b5491_create_initial_users_roles_and_user_.py
src/: .env.example  config.py  logging_config.py  main.py  test_main.py
src/api/: exception_handlers.py
src/authentication/: auth_dependency.py  config.py  exceptions.py  hashing.py  token_service.py
src/authentication/services/: password.py  token.py
src/db/: clients.py  connection.py
src/exceptions/: work_orders.py
src/models/: appointments.py  auth.py  client.py  invoice.py  invoices.py  schemas.py  vehicle.py  workOrders.py  work_orders.py
src/repository/: appointments.py  client.py  decorators.py  vehicle_repo.py  work_orders.py
src/routes/: auth.py  users.py
tests/: conftest.py  test_main.py  test_pwd_service.py
tests/test_auth/: test_auth_login.py  test_auth_register.py  test_pwd_service.py  test_token_service.py
tests/test_repos/: test_appointments.py  test_client_repo.py  test_work_orders.py
