[project]
name = "starranja_backend"
version = "0.1.0"
description = "Backend for the Starranja app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "beanie>=1.26.0",
    "motor>=3.6.0",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-branch",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "src"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
mypy_path = "src"
python_version = "3.13"
warn_unused_configs = true
explicit_package_bases = true