[project]
name = "starranja_backend"
version = "0.1.0"
description = "Backend for the Starranja app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "pyseto>=1.8.5",
    "beanie>=2.0.0",
    "pymongo>=4.15.3",
    "bson>=0.5.10",
    "email-validator>=2.1.0",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
# Asyncio mode for pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "src"

# Environment
env_files = [".env.test", ".env"]

# Coverage
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-branch",
]

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# PostgreSQL configuration for pytest-postgresql
postgresql_port = 5555
postgresql_host = "localhost"
postgresql_user = "pytest_user"
postgresql_password = "pytest_pass"

# Logging (optional)
log_cli = false
log_cli_level = "INFO"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
explicit_package_bases = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
